tests/ui/macros/issue-109237.rs
macro_rules! statement {
    () => {;}; //~ ERROR expected expression
}

fn main() {
    let _ = statement!();
}
